added deployment process in the Tomcat included in the distribution